# cr18-project

./: Cargo.toml  README.md  ethernet-results-vm.txt  flake.nix  kernel-config  meson.build  plan.md  plan.org  server.py  treefmt.nix
presentation/: bibliography.yaml  presentation.typ
server-epoll/: Cargo.toml
server-epoll/src/: main.rs
server-io-uring/: Cargo.toml
server-io-uring-zcrx/: Cargo.toml
server-io-uring-zcrx/src/: main.rs
server-io-uring/src/: main.rs
src/: buf_ring.rs  main.cpp  main.rs  server.rs  zcrx.rs
